# scriptura

./: .gitignore  1783251775765-milestone-implementation-plan.md  CMakeLists.txt  CODEBASE_ANALYSIS_REPORT.md  CODE_OF_CONDUCT.md  DEPLOYMENT.md  LICENSE  README.md  TEST_CHECKLIST.md  WINDOWS_DEPLOYMENT.md  build.bat  build.sh  codeeditor.cpp  codeeditor.h  columnselection.h  commandpalette.h  crashhandler.cpp  dapclient.cpp  dapclient.h  debugconfiguration.cpp  debugconfiguration.h  debugpanel.cpp  debugpanel.h  dependencyresolver.cpp  dependencyresolver.h  deploy-linux.sh  deploy-macos.sh  deploy-windows.bat  eventbus.cpp  eventbus.h  findreplace.cpp  findreplace.h  gitbranchwidget.cpp  gitbranchwidget.h  gitmergewidget.h  gitpanel.cpp  gitpanel.h  lspclient.cpp  lspclient.h  main.cpp  (+38 more)
.github/workflows/: build.yml
.kilo/plans/: 1781982060643-text-editor-implementation.md
deployment/linux/: scriptura.desktop
deployment/windows/: deploy-windows.bat
docs/: TEST_CHECKLIST.md  how-to-develop-a-plugin.md  how-to-install-a-plugin.md  plugin-system-plan.md
include/scriptura/: pluginfeature.h  plugininterface.h
plans/: plugin-system-fixes.md
plugins/: aiinlinecompletion.cpp  codeactionui.cpp  codeactionui.h  httpclientpanel.cpp  httpclientpanel.h  httpclientpanel.json  pluginregistry.cpp  pluginregistry.h  sqliteviewer.cpp  sqliteviewer.h
plugins/git/: CMakeLists.txt  git.json  gitplugin.cpp  gitplugin.h
scripts/: build.bat  convert-icon.ps1  run.sh  run_tests.sh
sdk/cmake/: ScripturaPluginSDKConfig.cmake.in
sdk/examples/hello/: CMakeLists.txt  helloplugin.cpp  helloplugin.h  plugin.json
src/: codeeditor.cpp  codeeditor.h  customtitlebar.cpp  customtitlebar.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.py  mainwindow.ui  projectsearch.cpp  projectsearch.h  resources.qrc  themeicons.cpp  themeicons.h  thememanager.cpp  thememanager.h  version.h.in  windowanimator.cpp  windowanimator.h
src/internals/: configvalidator.cpp  configvalidator.h  crashhandler.h  dependencyresolver.cpp  dependencyresolver.h  eventbus.cpp  eventbus.h  lengthprefixedframer.cpp  lengthprefixedframer.h  permission.cpp  permission.h  plugincontext.cpp  plugincontext.h  plugincrashhandler.cpp  plugincrashhandler.h  pluginmanager.cpp  pluginmanager.h  pluginmanagerdialog.cpp  pluginmanagerdialog.h  pluginsettings.cpp  pluginupdater.cpp  rundialog.cpp  rundialog.h  servicelocator.cpp  taskrunner.cpp  taskrunner.h  workspace.cpp
src/panels/: findreplace.cpp  findreplace.h  gitbranchwidget.cpp  gitdiffwidget.cpp  gitdiffwidget.h  gitmergewidget.cpp  gitmergewidget.h  gitpanel.cpp  gitpanel.h  terminalpanel.cpp  terminalpanel.h  todopanel.cpp  todopanel.h
src/pluginhost/: pluginhost.cpp  pluginhost.h
src/plugins/: aiinlinecompletion.cpp  aiinlinecompletion.h  aiinlinecompletion.json  codeactionui.cpp  codeactionui.h  codeactionui.json  httpclientpanel.cpp  httpclientpanel.h  pluginregistry.cpp  pluginregistry.h  pluginregistry.json  sqliteviewer.cpp  sqliteviewer.json
src/plugins/git/: CMakeLists.txt  git.json  gitplugin.cpp
src/plugins/pluginhost/: pluginhost.cpp  pluginhostprotocol.cpp  pluginhostprotocol.h
src/services/dap/: dapclient.cpp  dapclient.h  debugconfiguration.cpp  debugconfiguration.h  debuggergutter.cpp  debuggergutter.h  debugpanel.cpp  debugpanel.h
src/services/lsp/: lspclient.cpp  lspclient.h
src/widgets/: breadcrumb.cpp  breadcrumb.h  columnselection.cpp  commandpalette.cpp  multi-cursor.h  splashscreen.h  splitmanager.cpp  splitmanager.h
tests/: CMakeLists.txt  main.cpp  mainwindow_stub.cpp  test_configvalidator.cpp  test_configvalidator.h  test_dependencyresolver.cpp  test_dependencyresolver.h  test_eventbus.cpp  test_eventbus.h  test_httpclientpanel.cpp  test_httpclientpanel.h  test_lengthprefixedframer.cpp  test_lengthprefixedframer.h  test_main.cpp  test_permissionmanager.cpp  test_permissionmanager.h  test_pluginsettings.cpp  test_pluginsettings.h  test_pluginsystem.cpp  test_pluginsystem.h  test_taskrunner.cpp  test_taskrunner.h  test_workspace.cpp  test_workspace.h
